Remove navigation.js from concat (no longer needed with mobile nav).  Fix issue with z-index causing unclickable parent menu item links.

--- a/assets/sass/modules/_mobile-navigation.scss
+++ b/assets/sass/modules/_mobile-navigation.scss
@@ -291,7 +291,7 @@
 	.sub-menu {
 		left: 0;
 		opacity: 0;
-		z-index: 1;
+		z-index: -1;
 		width: 50vw;
 
 		@include media($tablet-portrait) {
@@ -311,6 +311,15 @@
 			float: none;
 			margin: 0;
 		}
+	}
+}
+
+// Adjust submenu z-index when parent is visible
+.mobile-nav.dropdown .visible {
+
+	// Adjust z-index when visible
+	.sub-menu {
+		z-index: 1;
 	}
 }
 
